# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = ["non_empty", "lex", "test_util", "syn", "error", "reggie", "tests", "ast_vm"]

# [dependencies]

# [dev-dependencies]
# criterion = "0.3.5"
# mlua = { version = "0.7", features = ["lua54", "vendored"] }
# lazy_static = "1.4.0"
# indoc = "1.0"
