# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["non_empty", "lex", "test_util", "syn", "error", "reggie", "tests", "ast_vm", "keyed_vec", "string"]
resolver = "2"

# [dependencies]

# [dev-dependencies]
# lazy_static = "1.4.0"
# indoc = "1.0"
