[package]
name = "luar_lex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
lazy_static = "1.4.0"
logos = "0.12"
regex = "1.4"
num = "0.4"
quickcheck = { version = "1.0", optional = true }

[dev-dependencies]
test_util = { path = "../test_util" }
quickcheck = "1.0"
quickcheck_macros = "1.0"
insta = "1.3"
indoc = "1.0"