[package]
name = "reggie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
quickcheck = ["dep:quickcheck", "dep:test_util"]

[[bin]]
name = "reggiec"
path = "src/reggiec.rs"

[dependencies]
luar_syn = { path = "../syn" }
luar_lex = { path = "../lex" }
luar_error = { path = "../error" }
quickcheck = { version = "1.0", optional = true }
test_util = { path = "../test_util", optional = true }
itertools = "0.10"

[dev-dependencies]
non_empty = { path = "../non_empty", features = ["quickcheck"] }
test_util = { path = "../test_util" }
luar_lex = { path = "../lex", features = ["quickcheck"] }
quickcheck = { version = "1.0" }
quickcheck_macros = "1.0"
ntest = "0.7.5"