[package]
name = "reggie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
quickcheck = ["dep:quickcheck", "dep:test_util", "luar_string/quickcheck"]
compact_value = []
trace-execution = []
trace-allocation = []
default = ["compact_value"]

[[bin]]
name = "reggiec"
path = "src/reggiec.rs"

[dependencies]
luar_syn = { path = "../syn" }
luar_lex = { path = "../lex" }
luar_string = { path = "../string" }
keyed_vec = { path = "../keyed_vec" }
quickcheck = { version = "1.0", optional = true }
test_util = { path = "../test_util", optional = true }
itertools = "0.10"
decorum = "0.3"
enum-map = "2.1"
num-traits = "0.2"
libc = "0.2"
nonzero_ext = "0.3"
thiserror = "1.0.50"

[dev-dependencies]
non_empty = { path = "../non_empty", features = ["quickcheck"] }
test_util = { path = "../test_util" }
luar_lex = { path = "../lex", features = ["quickcheck"] }
luar_string = { path = "../string", features = ["quickcheck"] }
quickcheck = { version = "1.0" }
quickcheck_macros = "1.0"
ntest = "0.7.5"
