[package]
name = "luar_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "bench_main"
harness = false

[[test]]
name = "engine"
path = "./engine/main.rs"

[[test]]
name = "correctness"
path = "./correctness/main.rs"

[[test]]
name = "reggie"
path = "./reggie/main.rs"

[dependencies]
ast_vm = { path = "../ast_vm" }
reggie = { path = "../reggie", features = ["quickcheck"] }
luar_lex = { path = "../lex", features = ["quickcheck"] }
luar_error = { path = "../error" }
luar_syn = { path = "../syn" }
non_empty = { path = "../non_empty" }
itertools = "0.10"
quickcheck = "1.0"
quickcheck_macros = "1.0"
